--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -1,7 +1,6 @@
-
-footer{
+footer {
     text-align: center;
     padding: 20px;
-    background-color: #404040;
+    background-color: #0e0e0e;
     color: white;
 }
